first page almost done

--- a/index.html
+++ b/index.html
@@ -114,9 +114,38 @@
                 <h6>
                     Feedbacks
                 </h6>
-                <h3>
-                    23
-                </h3>
+                <ul class="feedbacks">
+                    <li>
+                        <span class="iconContainerFeedbacks">
+                            <i class="fas fa-smile smileFas"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="feedbacksCounter">
+                            2
+                        </span>
+                    </li>
+                    <li>
+                        <span class="iconContainerFeedbacks">
+                            <i class="fas fa-thumbs-up thumbUpFas"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="feedbacksCounter">
+                            14
+                        </span>
+                    </li>
+                    <li>
+                        <span class="iconContainerFeedbacks">
+                            <i class="fas fa-handshake handshakeFas"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="feedbacksCounter">
+                            10
+                        </span>
+                    </li>
+                </ul>
             </div>
 
         </div>
@@ -127,11 +156,28 @@
             4
         </div>
         <div class="grid_containerBox">
-            <div class="grid_itemBox box">
-                1
+            <div class="grid_itemBoxTwo box">
+                <h6>
+                    Training Required
+                </h6>
+                <h3>
+                    4
+                </h3>
             </div>
-            <div class="grid_itemBox box">
-                2
+            <div class="grid_itemBoxTwo box">
+                <h6>
+                    Activity Status
+                </h6>
+                <div class="grid_container">
+                    <div class="">
+                        <span class="iconContainerFeedbacks">
+                            <i class="fas fa-wifi handshakeFas"></i>
+                        </span>
+                    </div>
+                    <div class="viewAll">
+                        View all <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
             </div>
         </div>
         <button type="button" class="marginTop btn">
