First screen implemented

--- a/index.html
+++ b/index.html
@@ -150,10 +150,34 @@
 
         </div>
         <div class="box marginTop">
-            4
+            <div class="grid_containerNoSpaceBetween">
+                <div>
+                    <i class="fas fa-chart-bar chartSize"></i>
+                </div>
+                <div class="grid_containerNoSpaceBetween2">
+                    <h6>
+                        Targets and Goals
+                    </h6>
+                    <h3>
+                        500 rides
+                    </h3>
+                </div>
+            </div>
         </div>
         <div class="box marginTop">
-            4
+            <div class="grid_containerNoSpaceBetween">
+                <div>
+                    <i class="fas fa-wave-square chartSize"></i>
+                </div>
+                <div class="grid_containerNoSpaceBetween2">
+                    <h6>
+                        Monthly Targets
+                    </h6>
+                    <h3>
+                        23/50 rides
+                    </h3>
+                </div>
+            </div>
         </div>
         <div class="grid_containerBox">
             <div class="grid_itemBoxTwo box">
