--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 </head>
 <body>
     <nav>
-        <img
-                class="menu_bar"
-                src="assets/images/hamburger.png" alt="">
+        <a href="index.html">
+            <img
+                    class="menu_bar"
+                    src="assets/images/hamburger.png" alt="">
+        </a>
         <ul class="menu_items">
             <li>
                 <img class="notificationImage" src="assets/images/notifications.png" alt="">
@@ -149,36 +151,40 @@
             </div>
 
         </div>
-        <div class="box marginTop">
-            <div class="grid_containerNoSpaceBetween">
-                <div>
-                    <i class="fas fa-chart-bar chartSize"></i>
-                </div>
-                <div class="grid_containerNoSpaceBetween2">
-                    <h6>
-                        Targets and Goals
-                    </h6>
-                    <h3>
-                        500 rides
-                    </h3>
-                </div>
-            </div>
-        </div>
-        <div class="box marginTop">
-            <div class="grid_containerNoSpaceBetween">
-                <div>
-                    <i class="fas fa-wave-square chartSize"></i>
-                </div>
-                <div class="grid_containerNoSpaceBetween2">
-                    <h6>
-                        Monthly Targets
-                    </h6>
-                    <h3>
-                        23/50 rides
-                    </h3>
+        <a href="goals.html">
+            <div class="box marginTop">
+                <div class="grid_containerNoSpaceBetween">
+                    <div>
+                        <i class="fas fa-chart-bar chartSize"></i>
+                    </div>
+                    <div class="grid_containerNoSpaceBetween2">
+                        <h6>
+                            Targets and Goals
+                        </h6>
+                        <h3>
+                            500 rides
+                        </h3>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+        <a href="targets.html">
+            <div class="box marginTop">
+                <div class="grid_containerNoSpaceBetween">
+                    <div>
+                        <i class="fas fa-wave-square chartSize"></i>
+                    </div>
+                    <div class="grid_containerNoSpaceBetween2">
+                        <h6>
+                            Monthly Targets
+                        </h6>
+                        <h3>
+                            23/50 rides
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </a>
         <div class="grid_containerBox">
             <div class="grid_itemBoxTwo box">
                 <h6>
@@ -188,21 +194,23 @@
                     4
                 </h3>
             </div>
-            <div class="grid_itemBoxTwo box">
-                <h6>
-                    Activity Status
-                </h6>
-                <div class="grid_container">
-                    <div class="">
+            <a href="activity.html">
+                <div class="grid_itemBoxTwo box">
+                    <h6>
+                        Activity Status
+                    </h6>
+                    <div class="grid_container">
+                        <div class="">
                         <span class="iconContainerFeedbacks">
                             <i class="fas fa-wifi handshakeFas"></i>
                         </span>
-                    </div>
-                    <div class="viewAll">
-                        View all <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
+                        <div class="viewAll">
+                            View all <i class="fas fa-long-arrow-alt-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <button type="button" class="marginTop btn">
             Request Drop Off Code
