--- a/activity.html
+++ b/activity.html
@@ -80,9 +80,97 @@
         </div>
     </div>
     <div class="box marginTop boxPadding">
-        <h6 class="marginZero overviewTxt">
+        <h6 class="marginTopOnly overviewTxt">
             18 Nov. 2021
         </h6>
+        <div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    10:00PM - 02:00PM
+                </h4>
+                <h6 class="forH6">
+                    01:00PM - 02:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    02:00PM - 03:00PM
+                </h4>
+                <h6 class="forH6">
+                    02:00PM - 03:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    03:00PM - 04:00PM
+                </h4>
+                <h6 class="forH6">
+                    03:00PM - 04:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    04:00PM - 05:00PM
+                </h4>
+                <h6 class="forH6">
+                    04:00PM - 05:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftRed">
+                <h4 class="marginZero colorOnly">
+                    05:00PM - 12:00PM
+                </h4>
+                <h6 class="forH6">
+                    05:00PM - 12:00PM
+                </h6>
+            </div>
+        </div>
+
+        <h6 class="marginTopOnly overviewTxt">
+            19 Nov. 2021
+        </h6>
+        <div>
+            <div class="marginTop borderLeftRed">
+                <h4 class="marginZero colorOnly">
+                    10:00PM - 02:00PM
+                </h4>
+                <h6 class="forH6">
+                    01:00PM - 02:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    02:00PM - 03:00PM
+                </h4>
+                <h6 class="forH6">
+                    02:00PM - 03:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    03:00PM - 04:00PM
+                </h4>
+                <h6 class="forH6">
+                    03:00PM - 04:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftGreen">
+                <h4 class="marginZero colorOnly">
+                    04:00PM - 05:00PM
+                </h4>
+                <h6 class="forH6">
+                    04:00PM - 05:00PM
+                </h6>
+            </div>
+            <div class="marginTop borderLeftRed">
+                <h4 class="marginZero colorOnly">
+                    05:00PM - 12:00PM
+                </h4>
+                <h6 class="forH6">
+                    05:00PM - 12:00PM
+                </h6>
+            </div>
+        </div>
 
     </div>
 </div>
