More pages added

--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
             </div>
         </div>
         <div class="grid_containerBox">
-            <div class="grid_itemBox box">
+            <a href="rideCompleted.html">
+                <div class="grid_itemBox box">
                  <span class="iconContainer">
                     <i class="fas fa-cart-plus"></i>
                 </span>
-                <h6>
-                    Rides Completed
-                </h6>
-                <h3>
-                    23
-                </h3>
-            </div>
+                    <h6>
+                        Rides Completed
+                    </h6>
+                    <h3>
+                        23
+                    </h3>
+                </div>
+            </a>
             <div class="grid_itemBox box">
                 <span class="iconContainer">
                     <i class="fas fa-chart-bar"></i>
