--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         }
     </style>
     <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="dist/modal.css">
 </head>
 <body>
     <nav>
@@ -214,9 +215,21 @@
                 </div>
             </a>
         </div>
-        <button type="button" class="marginTop btn">
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <div class="modal-body">
+                    <p>Some text in the Modal Body</p>
+                    <p>Some other text...</p>
+                </div>
+            </div>
+
+        </div>
+        <button type="button" id="myBtn" class="marginTop btn">
             Request Drop Off Code
         </button>
     </div>
+    <script src="dist/_9550808079.js"></script>
 </body>
 </html>
