--- a/index.html
+++ b/index.html
@@ -220,8 +220,16 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <div class="modal-body">
-                    <p>Some text in the Modal Body</p>
-                    <p>Some other text...</p>
+                    <span class="close">&times;</span>
+                    <p class="dropOffTxt">Drop off confirmation code is</p>
+                    <h4 class="generatedCode">
+                        rF6726roaddo
+                    </h4>
+
+
+                    <button type="button" class="modalBtnConfirmed">
+                        Confirmed
+                    </button>
                 </div>
             </div>
 
