Filter dropdown updated

--- a/activity.html
+++ b/activity.html
@@ -72,9 +72,12 @@
         <div class="grid_item">
             <div class="dropDownContainer">
                 <select name="" id="">
-                    <option value="">Daily</option>
-                    <option value="">Weekly</option>
-                    <option value="">Monthly</option>
+                    <option value="">Current Week</option>
+                    <option value="">Previous Week</option>
+                    <option value="">Current Month</option>
+                    <option value="">Previous Month</option>
+                    <option value="">Current Year</option>
+                    <option value="">Previous Year</option>
                 </select>
             </div>
         </div>
